@@ -25,6 +25,7 @@ Import-Package: com.google.common.annotations,
  com.openexchange.jslob.storage.registry,
  com.openexchange.log,
  com.openexchange.osgi,
+ com.openexchange.preferences,
  com.openexchange.server,
  com.openexchange.session,
  com.openexchange.sessiond,
