@@ -2,6 +2,10 @@
 
  - Fix for bug 30100: Include causing throwable for java.io.FileNotFoundException 
 
+* 2013-12-02 - thorben.betten@open-xchange.com
+
+ - Fix for bug 30119: Avoid superfluous database updates on JSlob write-back requests
+
 * 2013-11-29 - jan.bauerdick@open-xchange.com
 
  - Fix for bug 29495: Removed port 587 from list of secure smtp ports
